add the shadcn in this library and also add the alerts components

--- a/content/docs/components/alert.mdx
+++ b/content/docs/components/alert.mdx
@@ -3,7 +3,7 @@ title: Alert Component
 description: Documentation for the Alert component from Shadwui + Shadcn UI.
 ---
 
-import CodeBlock from "components/CodeBlock";
+import ComponentPage from "components/_components/componentPage";
 
 ## Overview
 
@@ -19,4 +19,4 @@ npx shadcn-ui add alert
 
 ## Components
 
-<CodeBlock />
+<ComponentPage />
