write the mongoose and model connection doc

--- a/content/docs/blocks/block-01.mdx
+++ b/content/docs/blocks/block-01.mdx
@@ -1,3 +1,16 @@
 ---
-title : Block 01
+title: Hero
 ---
+
+import ComponentPage from "components/_components/componentPage";
+
+## Components
+
+<ComponentPage 
+  page="blocks"
+  directory="hero" 
+  files={["block-01", "block-02"]} 
+/>
+
+## Github
+Github Repo: [Shadwui](https://github.com/sahilkumardev/shadwui)
