--- a/content/docs/components/alert.mdx
+++ b/content/docs/components/alert.mdx
@@ -18,10 +18,12 @@ npx shadcn@latest add alert
 
 ## Components
 
-<ComponentPage 
-  directory="alerts" 
-  files={["alert-01", "alert-02", "alert-03"]} 
+<ComponentPage
+  page="components"
+  directory="alerts"
+  files={["alert-01", "alert-02", "alert-03"]}
 />
 
 ## Github
+
 Github Repo: [Shadwui](https://github.com/sahilkumardev/shadwui)
