--- a/content/docs/templates/template-01.mdx
+++ b/content/docs/templates/template-01.mdx
@@ -1,3 +1,17 @@
 ---
-title : Template 01
+title: Modern
 ---
+
+import ComponentPage from "components/_components/componentPage";
+
+## Components
+
+<ComponentPage
+  page="templates"
+  directory="modern"
+  files={["modern-01", "modern-02"]}
+/>
+
+## Github
+
+Github Repo: [Shadwui](https://github.com/sahilkumardev/shadwui)
