add the changes

--- a/content/docs/components/alert.mdx
+++ b/content/docs/components/alert.mdx
@@ -2,7 +2,7 @@
 title: Alert
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 ## Overview
 
