--- a/content/docs/components/badge.mdx
+++ b/content/docs/components/badge.mdx
@@ -2,7 +2,7 @@
 title: Badge
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Badge component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
@@ -17,6 +17,7 @@ npx shadcn@latest add badge
 ## Components
 
 <ComponentPage 
+  page="components"
   directory="badges" 
   files={["badge-01", "badge-02", "badge-03"]} 
 />
