--- a/content/docs/components/slider.mdx
+++ b/content/docs/components/slider.mdx
@@ -2,7 +2,7 @@
 title: Slider
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Slider component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
