--- a/content/docs/blocks/block-01.mdx
+++ b/content/docs/blocks/block-01.mdx
@@ -2,7 +2,7 @@
 title: Hero
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 ## Components
 
