--- a/content/docs/components/banner.mdx
+++ b/content/docs/components/banner.mdx
@@ -2,7 +2,7 @@
 title: Banner
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Banner component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
