--- a/content/docs/components/breadcrumb.mdx
+++ b/content/docs/components/breadcrumb.mdx
@@ -2,7 +2,7 @@
 title: Breadcrumb
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Breadcrumb component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
