--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -2,7 +2,7 @@
 title: Button
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Button component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
