--- a/content/docs/components/notification.mdx
+++ b/content/docs/components/notification.mdx
@@ -2,7 +2,7 @@
 title: Notification
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Notification component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
