--- a/content/docs/components/select.mdx
+++ b/content/docs/components/select.mdx
@@ -2,7 +2,7 @@
 title: Select
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Select component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
