--- a/content/docs/components/textarea.mdx
+++ b/content/docs/components/textarea.mdx
@@ -2,7 +2,7 @@
 title: Textarea
 ---
 
-import ComponentPage from "components/_components/componentPage";
+import ComponentPage from "../../components/componentPage";
 
 The Textarea component is used to display important messages to users. It comes with several sub components to structure the content effectively.
 
